force-app/main/default/objects/Team__c/fields/Conference_Tournament_Status__c.field-meta.xml
<CustomField>
    <fullName>Conference_Tournament_Status__c</fullName>
    <label>Conference Tournament Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competing</fullName>
            </value>
            <value>
                <fullName>Eliminated</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>