force-app/main/default/objects/Team__c/fields/KenPom_Rating__c.field-meta.xml
<CustomField>
    <fullName>KenPom_Rating__c</fullName>
    <label>KenPom Rating</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>