force-app/main/default/objects/Team__c/fields/Last_10_Record__c.field-meta.xml
<CustomField>
    <fullName>Last_10_Record__c</fullName>
    <label>Last 10 Record</label>
    <description>W-L in last 10 games e.g. 8-2</description>
    <type>Text</type>
    <length>10</length>
</CustomField>