force-app/main/default/objects/Team__c/fields/Mascot__c.field-meta.xml
<CustomField>
    <fullName>Mascot__c</fullName>
    <label>Mascot</label>
    <description>Team mascot name (e.g., Blue Devils, Wildcats, Bulldogs)</description>
    <type>Text</type>
    <length>100</length>
</CustomField>