force-app/main/default/objects/Team__c/fields/NET_Ranking__c.field-meta.xml
<CustomField>
    <fullName>NET_Ranking__c</fullName>
    <label>NET Ranking</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>