force-app/main/default/objects/Team__c/fields/Opp_Points_Per_Game__c.field-meta.xml
<CustomField>
    <fullName>Opp_Points_Per_Game__c</fullName>
    <label>Opp Points Per Game</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>