force-app/main/default/objects/Team__c/fields/Overall_Power_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Power_Rating__c</fullName>
    <label>Overall Power Rating</label>
    <description>Composite power rating from all factors</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>