force-app/main/default/objects/Team__c/fields/Points_Per_Game__c.field-meta.xml
<CustomField>
    <fullName>Points_Per_Game__c</fullName>
    <label>Points Per Game</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>