force-app/main/default/objects/Team__c/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <label>Primary Color</label>
    <description>Team primary color hex code from ESPN (e.g. 003da5)</description>
    <type>Text</type>
    <length>10</length>
</CustomField>