force-app/main/default/objects/Team__c/fields/Record_Losses__c.field-meta.xml
<CustomField>
    <fullName>Record_Losses__c</fullName>
    <label>Record Losses</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>