force-app/main/default/objects/Team__c/fields/Seed__c.field-meta.xml
<CustomField>
    <fullName>Seed__c</fullName>
    <label>Seed</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>