force-app/main/default/objects/Team__c/fields/Strength_of_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Strength_of_Schedule__c</fullName>
    <label>Strength of Schedule</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>4</scale>
</CustomField>