force-app/main/default/objects/Team__c/fields/Tournament__c.field-meta.xml
<CustomField>
    <fullName>Tournament__c</fullName>
    <label>Tournament</label>
    <type>Lookup</type>
    <referenceTo>Tournament__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>