force-app/main/default/objects/Team__c/fields/Tournament_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Likelihood__c</fullName>
    <label>Tournament Likelihood</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>